{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 202,
  "lineage": "116320b6-56e2-ecd2-8078-969ab2933cc3",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0548f5ed6dfa27194",
            "id": "rtb-0548f5ed6dfa27194",
            "owner_id": "698037680342",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0903b583dfa2ceca5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_vpc private route table"
            },
            "vpc_id": "vpc-0a0deab25de9dbd4f"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw_eip",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-036a55a83828cad73",
            "public_dns": "ec2-52-4-221-223.compute-1.amazonaws.com",
            "public_ip": "52.4.221.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:698037680342:instance/i-028951ad6e4148b68",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028951ad6e4148b68",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-02224580e25e2dd26",
            "private_dns": "ip-10-0-0-36.ec2.internal",
            "private_ip": "10.0.0.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07417bf3fb2da2f8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e9aebdb5d633b530",
            "tags": {
              "Description": "Instance in private subnet",
              "Name": "Private-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d37c179433cc6a86"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.allow_ssh_icmp_private",
            "module.vpc.aws_security_group.allow_ssh_public",
            "module.vpc.aws_subnet.private_subnet_1b",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:698037680342:instance/i-0243437359244415c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0243437359244415c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-0461b658620a4f5cb",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_ip": "10.0.0.15",
            "public_ip": "54.80.125.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b34319d19eec1756",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-011caf2029f9736ba",
            "tags": {
              "Describe": "Instance in public subnet",
              "Name": "Public-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d2ecacae38516367"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.allow_ssh_public",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0da20dd78b93640d9",
            "owner_id": "698037680342",
            "tags": {
              "Description": "demo",
              "Name": "test_vpc_igw"
            },
            "vpc_id": "vpc-0a0deab25de9dbd4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036a55a83828cad73",
            "id": "nat-0903b583dfa2ceca5",
            "network_interface_id": "eni-07c1ed624c8900826",
            "private_ip": "10.0.0.12",
            "public_ip": "52.4.221.223",
            "subnet_id": "subnet-011caf2029f9736ba"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw_eip",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "connect_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0da20dd78b93640d9",
            "id": "r-rtb-003cee31f130d20a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003cee31f130d20a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-003cee31f130d20a6",
            "owner_id": "698037680342",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test_vpc public route table"
            },
            "vpc_id": "vpc-0a0deab25de9dbd4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asc_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c24242059200ea2",
            "route_table_id": "rtb-003cee31f130d20a6",
            "subnet_id": "subnet-011caf2029f9736ba"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1a",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_icmp_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698037680342:security-group/sg-0d37c179433cc6a86",
            "description": "Allow SSH and ICMP traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d37c179433cc6a86",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ping from public subnet",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0d2ecacae38516367"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "SSH from instances in the public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d2ecacae38516367"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_private",
            "name_prefix": null,
            "owner_id": "698037680342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_icmp_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0deab25de9dbd4f"
          },
          "dependencies": [
            "module.vpc.aws_security_group.allow_ssh_public",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698037680342:security-group/sg-0d2ecacae38516367",
            "description": "Allow SSH traffic to public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2ecacae38516367",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "698037680342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0deab25de9dbd4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698037680342:subnet/subnet-0e9aebdb5d633b530",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.32/27",
            "id": "subnet-0e9aebdb5d633b530",
            "map_public_ip_on_launch": false,
            "owner_id": "698037680342",
            "vpc_id": "vpc-0a0deab25de9dbd4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698037680342:subnet/subnet-011caf2029f9736ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/27",
            "id": "subnet-011caf2029f9736ba",
            "map_public_ip_on_launch": true,
            "owner_id": "698037680342",
            "vpc_id": "vpc-0a0deab25de9dbd4f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698037680342:vpc/vpc-0a0deab25de9dbd4f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/26",
            "default_network_acl_id": "acl-0569ba50797abd28c",
            "default_route_table_id": "rtb-0548f5ed6dfa27194",
            "default_security_group_id": "sg-0eea88ed218fc5789",
            "dhcp_options_id": "dopt-5b4d2920",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a0deab25de9dbd4f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0548f5ed6dfa27194",
            "owner_id": "698037680342",
            "tags": {
              "Description": "demo",
              "Name": "test_vpc"
            }
          }
        }
      ]
    }
  ]
}